
UPDATES:

v1.3.6
Allow for declaration of whether intervals are open or closed for 
ic_sp and ic_np

v1.3.5
Added parametric AFT models
fixed bug in plot.icenRegFit regarding xlim and ylim for semiparamtric model
sped up ic_sp
added vignette

v1.3.4
fixed show() for summary class with no covariates
added ic_np for fitting NPMLE specifically (*much* faster)
switched syntax from “final_llk” to “llk” for all models
made plot() and lines() more user-friendly 
Switched to RcppEigen, rather than including static C++ library

v1.3.3 
Fixed memory access issue reported by CRAN

v1.3.2
Preparing for JSS submission
Removed unpublished algorithms and methods

v1.3.1
Imported method as reported by CRAN

v1.3.0 
getFitEsts is much faster
added predict function
added imputeCens function
added generalized gamma distribution to choice of parametric families
added imputed cross validation
added plot method for sp_curves
numerically stabilized ic_sp(model = 'ph')


v1.2.8
Resolved issue of licenses and gave proper credit to the Eigen team for 
using their code for matrix algebra
Switched to reference classes for fits, rather than lists with reassigned classes
Fixed bug with getFitEsts
Added methods for calculating the NPMLE (univariate or bivariate)
ic_par sped up, especially for models with lots of covariates
included use of cbind for response (i.e. cbind(l, u) ~…), rather than Surv(l, u, type = ‘interval’) ~ …, which is still supported
Added constrained gradient ascent step to ic_sp
Switched to partially numeric derivatives for ic_par, greatly speeding up calculations for models with many covariates


v1.2.7
Added dependencies to “methods” package into NAMESPACE and DESCRIPTION

v1.2.6
models allow for no covariates
summary(fit) now returns a summary object rather than just printing
At C++ level, switched isnan to ISNAN
removed browser() call

v1.2.5
Adding “weights” options to model fits
Cleaned up manual
Added warning to diag_covar if incorrect yType selected