@@ -4,6 +4,7 @@ UPDATES:
 v1.3.6
 Allow for declaration of whether intervals are open or closed for 
 ic_sp and ic_np
+Added simulationFunctions.R
 
 v1.3.5
 Added parametric AFT models
